--- a/miPorfolio/css/style.css
+++ b/miPorfolio/css/style.css
@@ -14,23 +14,40 @@ header{
     align-items: center;
     justify-content: space-between;
 }
+.conteiner{
+    display: flex;
+}
+header .row{
+    display: flex;
+    width: 90%;
+}
 .logo{
+    display: flex;
+    align-items: center;
+}
+
+.logo i{
+    font-size: 40px;
+    padding: 0 30px;
+}
+.navegacion{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.navegacion{
-    display: flex;
-}
 .navegacion ul li {
     display: flex;
     display: inline-block;
-    padding-right: 20px;
+    padding-right: 5px;
 }
-a{
+.nav-link{
     color: rgb(249, 131, 89);
     text-decoration: none;
     font-family: 'Quicksand', sans-serif;
+    padding: 5px 10px;
+}
+.nav{
+    flex-wrap: nowrap;
 }
 
 .encabezado{
@@ -38,11 +55,16 @@ a{
     height: 100%;
     margin: 0px;
 }
+.img-fluid{
+    max-width: 100%;
+    height: auto;
+}
 
 .banner{
     width: 100%;
     display: flex;
     justify-content: space-between;
+    padding: 0px;
 }
 
 .banner img{
@@ -82,4 +104,7 @@ a{
 }
 .nombre h2 strong{
     font-size: 150px;
+}
+.display-4{
+    font-weight: bold;
 }
